--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
 h1{color: rgb(127, 217, 255);}
+p{
+    color: lightcoral;
+}
+h2{color: brown;}
+.maclasse{color: blueviolet;}
+p{
+    color: black;
+    font-size: 20px;
+    padding-left: 15;
+    padding-right: 15;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family:roboto,sans-serif;
+}
+body{background-color: hsl(248, 100%, 97%);}
+h1{font-style; text-decoration: underline; text-align}
