--- a/tableau.css
+++ b/tableau.css
@@ -2,6 +2,10 @@ table{
     border-collapse: collapse;
 }
 
-td{
-    border: 15px solid rgb(0, 0, 0);
+td, th{ 
+    border: 3px solid rgb(0, 0, 0);
+    color: aquamarine;
+}
+th{
+    background-color: burlywood;
 }
